<resources>
    <string name="app_name">NewsBreeze</string>
    <string name="str_search">Search by title</string>
    <string name="str_read">Read</string>
    <string name="str_save">Save</string>
    <string name="str_saved">Saved</string>
    <string name="str_today">Today</string>
    <string name="str_see_all">See all..</string>
    <string name="str_no_news_found">No News Found</string>
    <string name="str_saved_successfully">Saved Successfully</string>
</resources>