<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiIvBack"
        android:src="@drawable/ic_black_back_arrow"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiTvCaptionSaved"
        android:text="@string/str_saved"
        android:textSize="28sp"
        android:textColor="@color/news_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/uiIvBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/uiIvBack"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiCvSearchContainer"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/uiTvCaptionSaved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/uiIvSearchIcon"
                android:padding="4dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/uiEtSearchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:gravity="center_vertical"
                android:hint="@string/str_search"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/uiIvFilter"
                app:layout_constraintStart_toEndOf="@id/uiIvSearchIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/uiIvFilter"
                android:padding="4dp"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiTvCaptionToday"
        app:layout_constraintStart_toStartOf="@id/uiCvSearchContainer"
        android:text="@string/str_today"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/uiCvSearchContainer"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvCaptionSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/str_see_all"
        android:textColor="@color/news_green"
        app:layout_constraintBottom_toBottomOf="@+id/uiTvCaptionToday"
        app:layout_constraintEnd_toEndOf="@id/uiCvSearchContainer"
        app:layout_constraintTop_toTopOf="@id/uiTvCaptionToday" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/uiIvNoSavedNewsIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiTvCaptionToday"
        app:srcCompat="@drawable/ic_no_service" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiTvCaptionNoSavedNews"
        android:text="@string/str_no_news_found"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/uiIvNoSavedNewsIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/uiCvSavedCardContainer"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="5dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiTvCaptionToday">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/uiRvSavedNews"
            tools:listitem="@layout/model_saved_news"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>